tests/ui/binop/binop-bitxor-str.rs
fn main() { let x = "a".to_string() ^ "b".to_string(); }
//~^ ERROR no implementation for `String ^ String`

// ferrocene-annotations: fls_abp6tjbz8tpn
// Bit Expressions
//
// ferrocene-annotations: fls_izdv9i4spokw
// Operator Expressions
